.. This file should contain the changes for the last release only, which
   will be included on the package's page on pypi. All older entries are
   kept in HISTORY.txt

Changelog
=========

4.0b1 - Unreleased
------------------

- Make global_cache_settings responsible for deciding to switch on gzip
  compression instead of doing it in the enableHTTPCompression script. This
  avoids another costly Python script call.
  [hannosch]

- Avoid the test function in the main_template. It doesn't exist in view page
  template files.
  [hannosch]

- Avoid the getSectionFromURL method completely and merge functionality into
  the bodyClass method.
  [hannosch]

- Display logoIcon.png instead of favicon.ico on the Zope root overview screen,
  for compatibility with IE which refuses to render X-ICON format images in the
  document body.
  [davisagli]

- Avoid yet another mindless Python script and deprecate renderBase.
  [hannosch]

- Simplify the charset handling, by moving the actual setting into the
  global_cache_headers macro.
  [hannosch]

- Replaced the getSectionFromURL Python script with a view method.
  [hannosch]

- Deprecated the computeRelatedItems script in favor of a method on the
  related items viewlet.
  [hannosch]

- Hide plonetheme.classic from the list of uninstallable products to reduce
  confusion, as at this point it can't be uninstalled without breaking
  sunburst as well when the Quick Installer unregisters its CSS.
  [davisagli]

- Altered table of contents javascript so that comments are not displayed.
  Refs. #8621.
  [dbfrombrc]

- Added back INavigationRoot to CMFPlone.browsers. We need to provide an
  upgrade step for persistent marker interfaces before removing it.
  This refs http://dev.plone.org/plone/ticket/10072.
  [hannosch]

- Updated markup of document_view and event_view to follow conventions 
  in main_template. 
  References https://dev.plone.org/plone/ticket/9981
  [spliter]
